add login and register